--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>heloo</title>
-</head>
+    <link rel ="stylesheet"href="hello.css">
 <body>
-   <h1>hello i am piyush bhatt</h1>
+   <h1 id="myHeading">hello i am piyush bhatt</h1>
+   <script src="hello.js"></script>
 </body>
 </html>
