a new commit conflict added

--- a/hello.html
+++ b/hello.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>heloo</title>
-    <link rel ="stylesheet"href="hello.css">
+    <title>Document</title>
+    <link rel="stylesheet"href=hello.css>
+</head>
 <body>
-   <h1 id="myHeading">hello i am piyush bhatt</h1>
-   <script src="hello.js"></script>
+  <h1 id="myHeading">all this created to the git hub learning</h1> 
+  <script src="hello.js"></script>
 </body>
 </html>
